# SegFault

./: CMakeLists.txt  LICENSE  README.md  README_zh.md  main.cc  worker.sh
data/gbs/: README.md  sto-3g.json
data/lebedev/: README.md
data/xyz/: c.xyz  ch3oh.xyz  ch4.xyz  co.xyz  h2o.xyz
docs/: docs_en.typ  docs_zh.typ  fdd-code.inc  notes.typ  refs.bib
include/: beckegrid.hpp  constants.hpp  dft.hpp  hf.hpp  lblas.hpp  lebedev.hpp  mints.hpp  rsh.hpp
src/: beckegrid.cc  cspline.cc  dft.cc  hf.cc  lebedev.cc  mints.cc  rsh.cc
